--- a/15.10/Vagrantfile
+++ b/15.10/Vagrantfile
@@ -7,6 +7,14 @@ Vagrant.configure '2' do |config|
         libvirt.memory = 4096
     end
 
+    config.cache.scope = :box
+    #config.cache.enable :gem
+    config.cache.synced_folder_opts = Hash[
+        type: '9p',
+        accessmode: 'mapped',
+        owner: 'client'
+    ]
+
     config.vm.provision 'shell', path: '../scripts/ubuntu_country_setup.sh',
         args: ['archive.ubuntu.com', VagrantCommons.ubuntu_archive_url]
 end
