--- a/rock-16.04/Vagrantfile
+++ b/rock-16.04/Vagrantfile
@@ -1,3 +1,5 @@
+require_relative '../vagrant_commons'
+
 Vagrant.configure '2' do |config|
     config.vm.box = 'sylvainjoyeux/ubunty-16.04-x86_64'
     config.vm.provider :libvirt do |libvirt|
@@ -21,6 +23,8 @@ Vagrant.configure '2' do |config|
         owner: 'client'
     ]
 
+    config.vm.provision 'shell', path: '../scripts/ubuntu_country_setup.sh',
+        args: ['us.archive.ubuntu.com', VagrantCommons.ubuntu_archive_url]
     config.vm.provision 'file',
         source: File.join(Dir.home, '.gitconfig'),
         destination: '.gitconfig'
